[metadata]
name = ansible-role-tripleo-ceilometer
summary = ansible-role-tripleo-ceilometer - Ansible ceilometer role for the TripleO project.
description-file =
    README.md
author = TripleO Team
author-email = jillr@redhat.com
home-page = https://git.openstack.org/cgit/openstack/ansible-role-tripleo-ceilometer
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/roles/tripleo-ceilometer/defaults = defaults/*
    share/ansible/roles/tripleo-ceilometer/meta = meta/*
    share/ansible/roles/tripleo-ceilometer/tasks = tasks/*
    share/ansible/roles/tripleo-ceilometer/templates = templates/*
    share/ansible/roles/tripleo-ceilometer/files = files/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

